# canton-mcp-server

./: .dockerignore  .env.canton.devnet  .env.canton.example  .gitignore  AUTOPILOT.md  CACHING_AND_HOT_RELOAD.md  CANONICAL_SYSTEM_DESIGN.md  CANTON_AUTOPILOT_TOOLS_AND_PRICING.md  CANTON_CI_ANALYSIS.md  CANTON_X402_INTEGRATION.md  CURSOR_QUICK_START.md  CURSOR_SETUP.md  DAML_AUTOMATER_IMPLEMENTATION_PLAN.md  DAML_AUTOMATER_REFACTOR.md  DAML_AUTOMATER_TESTING_RESULTS.md  DAML_REASON_ARCHITECTURE.md  DAML_REASON_COMPILATION_FIX.md  DAML_TOOLS_DEPENDENCY_ANALYSIS.md  DCAP_CONFIGURATION.md  DEPLOYMENT_SETUP.md  DEVNET_ENDPOINTS.md  DEVNET_MIGRATION_GUIDE.md  Dockerfile  Dockerfile.gpu  GATE1_ENFORCEMENT_DESIGN.md  GATE1_USAGE_GUIDE.md  IMPLEMENTATION_EPICS.md  LLM_INSIGHTS_FEATURE.md  LLM_PRIMARY_ARCHITECTURE.md  MCP_CLIENT_DIRECTORY_NOTES.md  MCP_PROMPTS_IMPLEMENTATION.md  MULTI_SERVER_SETUP.md  NEXT_SPRINT_REFACTOR_PLAN.md  PRODUCTION_SETUP.md  QUICK_START.md  README.md  RECOVERY_STATUS.md  RESEARCH_PLAN.md  SEMANTIC_SEARCH_ARCHITECTURE.md  STORY_3_1_IMPLEMENTATION.md  (+36 more)
.github/: ISSUE_DEPLOY_AND_CI.md
.github/workflows/: ci.yml
autobots/: Dockerfile  README.md  agent.js  docker-compose.yml  names.js  orchestrator.js  package.json  party-pool.js  payment-adapter-canton.js  payment-adapter-interface.js  personas.js  provisioner.js  runner.js  stats.js  tasks.json  virtual-bot.js
autobots/keys/: finn_wang.json  lars49.json  leila84.json  neonwolf379.json  zara.json
demo-project/: daml.yaml
demo-project/daml/: AssetTransfer.daml  BasicIou.daml  Main.daml  PaymentApproval.daml  PaymentApprovalTest.daml  SimpleContract.daml
resources/: README.md
resources/anti-patterns/: missing-signatory-v1.0.yaml
resources/docs/: daml-authorization-guide-v1.0.yaml
resources/patterns/: multi-party-approval-v1.0.yaml  (+2 more)
schemas/: anti-pattern.schema.json  doc.schema.json  pattern.schema.json  rule.schema.json
scripts/: extract_canonical_resources.py  test_git_verified_mcp.py  update-canonical-repos.sh
test-container/: Dockerfile  mcp_tester.py
test-daml/: AssetManagement.daml  BasicIou.daml  ClearSecurityViolation.daml  CompetitiveSecurityDisclosure.daml  LegitimateGamePatterns.daml  MultiPartyContract.daml  MultiPartyPaymentApproval.daml  PaymentApproval.daml  PaymentApprovalTest.daml  ProblematicExamples.daml  SemanticSearchTest.daml  ShipmentTracking.daml  SubtleSecurityIssue.daml  SupplyChain.daml  TradingExample.daml
tests/: test_resource_loader_hot_reload.py  test_resources.py  test_schema_validator.py
(+119 files in other folders)
