[project]
name = "canton-mcp-server"
version = "0.1.0"
description = "A FastMCP server for Canton blockchain development with DAML validation and authorization patterns"
readme = "README.md"
authors = [
    { name = "empea-careercriminal", email = "empeamtk@googlemail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.12.4",
]
keywords = ["canton", "daml", "blockchain", "mcp", "digital-asset"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/empea-careercriminal/canton-mcp-server"
Repository = "https://github.com/empea-careercriminal/canton-mcp-server"

[project.scripts]
canton-mcp-server = "canton_mcp_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
