[project]
name = "canton-mcp-server"
version = "0.1.0"
description = "MCP server for Canton blockchain development with DAML validation, authorization patterns, DCAP performance tracking, and x402 payments"
readme = "README.md"
authors = [
    { name = "empea-careercriminal", email = "empeamtk@googlemail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "x402>=0.1.0",
    "pydantic>=2.5.0",
    "python-dotenv>=1.0.0",
    "watchdog>=4.0.0",
    "pyyaml>=6.0.0",
    "jsonschema>=4.0.0",
    "anthropic>=0.34.0",
]
keywords = ["canton", "daml", "blockchain", "mcp", "digital-asset"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/empea-careercriminal/canton-mcp-server"
Repository = "https://github.com/empea-careercriminal/canton-mcp-server"

[project.scripts]
canton-mcp-server = "canton_mcp_server.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
